--- a/frontend/src/app/pages/signup/signup.pug
+++ b/frontend/src/app/pages/signup/signup.pug
@@ -4,22 +4,28 @@
 .login-box-body
   h4.login-box-msg Sign up to start your session
 
-  form.form(name='form', ng-submit='vm.login(form)', novalidate='')
+  form.form(name='form', ng-submit='signup.onSubmit(form)', novalidate)
     .box-body
-      .form-group
+      .form-group(ng-class="{'has-error': form.email.$invalid && form.$submitted}")
         label Email
-        input.form-control(type='email', name='email', ng-model='vm.user.email')
-      .form-group
-        label Password
-        input.form-control(type='password', name='password', ng-model='vm.user.password')
-      .form-group
-        label Confirm Password
-        input.form-control(type='password', name='confirm_password', ng-model='vm.user.confirm_password')
+        input.form-control(type='email' name='email' ng-model='signup.form.email' required)
+        ng-messages(for='form.email.$error' ng-show='form.email.$invalid && form.$submitted')
+          ng-message.help-block(when='required' ng-hide="form.email.$error.email") Email is required
+          ng-message.help-block(when='email' ng-hide="form.email.$error.required") Email is not correct
 
-      .form-group.has-error
-        p.help-block(ng-show='form.email.$error.required && form.password.$error.required && vm.submitted')
-          | Please enter your email and password.
-        p.help-block {{ vm.errors.other }}
+      .form-group(ng-class="{'has-error': form.password.$invalid && form.$submitted}")
+        label Password
+        input.form-control(type='password' name='password' ng-model='signup.form.password' required ng-minlength="6")
+        ng-messages(for='form.password.$error' ng-show='form.password.$invalid && form.$submitted')
+          ng-message.help-block(when='required' ng-hide="form.password.$error.minlength") Password is required
+          ng-message.help-block(when='minlength' ng-hide="form.password.$error.required") Min length 6
+
+      .form-group(ng-class="{'has-error': form.password_confirm.$invalid && form.$submitted}")
+        label Confirm Password
+        input.form-control(type='password' name='password_confirm' ng-model="signup.form.password_confirm" match="signup.form.password" required)
+        ng-messages(for='form.password_confirm.$error' ng-show='form.password_confirm.$invalid && form.$submitted')
+          ng-message.help-block(when='required' ng-hide="form.password_confirm.$error.match") Password is required
+          ng-message.help-block(when='match' ng-hide="form.password_confirm.$error.required") Password is not equal
 
       button.btn.btn-primary(type='submit')
         | Sign Up
