--- a/frontend/src/app/components/navbar/navbar.pug
+++ b/frontend/src/app/components/navbar/navbar.pug
@@ -8,3 +8,9 @@ header.main-header
   nav.navbar.navbar-static-top(role='navigation')
     a.sidebar-toggle(ng-click='nav.toggleAside()')
       span.sr-only Toggle navigation
+    .navbar-custom-menu
+      ul.nav.navbar-nav
+        li
+          a(href='#'  ng-click="nav.signout()")
+            b Sign out
+            i.fa.fa-sign-out(style="margin-left: 5px")
