--- a/frontend/src/app/pages/signin/signin.pug
+++ b/frontend/src/app/pages/signin/signin.pug
@@ -4,6 +4,9 @@
 .login-box-body(style="padding-bottom: 0px")
   h4.login-box-msg Sign in to start your session
 
+  .form-group.has-error
+    .help-block(ng-show="signin.errorMsg" align="center") {{signin.errorMsg}}
+
   form.form(name='form', ng-submit='signin.onSubmit(form)', novalidate)
     .box-body
       .form-group(ng-class="{'has-error': form.email.$invalid && form.$submitted}")
